--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,7 @@
   <title>Bootstrap Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel=stylesheet href=styles.css />
+  <link rel=stylesheet href=../styles.css />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -20,10 +20,10 @@
       <a class="navbar-brand" href="#">Restoration Project</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class=active><a href="index.html">Home</a></li>
-      <li><a href="pages/information.html">Information</a></li>
-      <li><a href="pages/people.html">People</a></li>
-      <li><a href="pages/about.html">about</a></li>
+      <li><a href="../index.html">Home</a></li>
+      <li><a href="information.html">Information</a></li>
+      <li><a href="people.html">People</a></li>
+      <li class=active><a href="about.html">about</a></li>
     </ul>
   </div>
 </nav>
@@ -34,15 +34,7 @@
 </div>
 
 
-<div class='footer'>
-  <div class='footer-item footer-one'></div>
-  <div class='footer-item footer-two'>
-    <a class=infootertwo href="https://github.com/huntermm18/restoration-project"><br>Link to github repository</a>
-  </div>
-  <div class='footer-item footer-three'></div>
-</div>
-  
-</div>
+
 
 </body>
 </html>
