--- a/pages/information.html
+++ b/pages/information.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Restoration Project</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel=stylesheet href=../styles.css />
@@ -14,25 +14,62 @@
 
 <body>
 
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Restoration Project</a>
+      <a class="navbar-brand" href="../index.html">Restoration Project</a>
     </div>
     <ul class="nav navbar-nav">
       <li><a href="../index.html">Home</a></li>
       <li class=active><a href="information.html">Information</a></li>
       <li><a href="people.html">People</a></li>
-      <li><a href="about.html">about</a></li>
+      <li><a href="about.html">About</a></li>
     </ul>
   </div>
 </nav>
-  
-<div class="container">
-  <h3>Basic Navbar Example</h3>
-  <p>A navigation bar is a navigation header that is placed at the top of the page.</p>
-</div>
 
+<div class="homepic"><img src=../images/infopicmain.png/></div>
+
+<div class="page">
+  <div>
+    <h3 class='italic mobile-text-shrink-small'>"seek ye out of the best books words of wisdom;
+       seek learning, even by study and also by faith." <br>- D&C 88:118</h3><hr/>
+    <h3 class='info-page-p mobile-text-shrink-large'>In order for us to learn truth we have to do our part.If we are
+       willing and sincere we can be blessed to receive a witness just
+        as so many before us have. Below are a few sources for learning
+         more about these events.<br>
+    </h3>
+    <h1 class=vert-margin>Resources</h1>
+  </div>
+  
+  <div class=picture-text-content>
+
+
+    <div class=contentbox>
+      <h2 class=word-margin> Joseph Smith History</h2>
+      <a href='https://www.churchofjesuschrist.org/study/scriptures/pgp/js-h/1?lang=eng'><img src='../images/scriptures2.png'/></a>
+    </div>
+
+    <div class='contentbox mobile-invert-order'>
+      <a href='https://www.josephsmithpapers.org/'><img src='../images/oldpaper.png'/></a>
+      <h2 class=word-margin>The Joseph Smith Papers</h2>
+    </div>
+
+    <div class=contentbox>
+      <h2 class=word-margin>The Doctrine and Covenants</h2>
+      <a href='https://www.churchofjesuschrist.org/study/scriptures/dc-testament?lang=eng'><img src='../images/scriptures2.png'/></a>
+    </div>
+
+
+  </div>
+
+    <div class='footer'>
+      <div class='footer-item footer-one'></div>
+      <div class='footer-item footer-two'>
+        <a class=infootertwo href="https://github.com/huntermm18/restoration-project"><br>Link to github repository</a>
+      </div>
+      <div class='footer-item footer-three'></div>
+    </div>
 
 
 
