--- a/pages/people.html
+++ b/pages/people.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Restoration Project</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel=stylesheet href=../styles.css />
@@ -11,28 +11,96 @@
 </head>
 
 
-
 <body>
 
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Restoration Project</a>
+      <a class="navbar-brand" href="../index.html">Restoration Project</a>
     </div>
     <ul class="nav navbar-nav">
       <li><a href="../index.html">Home</a></li>
       <li><a href="information.html">Information</a></li>
       <li class=active><a href="people.html">People</a></li>
-      <li><a href="about.html">about</a></li>
+      <li><a href="about.html">About</a></li>
     </ul>
   </div>
 </nav>
-  
-<div class="container">
-  <h3>Basic Navbar Example</h3>
-  <p>A navigation bar is a navigation header that is placed at the top of the page.</p>
-</div>
 
+<div class="homepic"><img src=../images/peoplepicmain.png/></div>
+
+<div class="page">
+
+  <h2 class=middle-padding>
+    A knowledge and testimony of these events
+     has changed the lives of millions of people across
+      the world
+  </h2><hr>
+  <h2 class=middle-padding>
+    The following is a collection of people and their stories
+  </h2>
+
+  <hr>
+  <p class=person-story>
+    *Under Construction* this is a filler story... skdjfksl
+    sdkljfklsdj kssjk sjdkfli eisfils nsenfskl si
+    slkefj sil seijfklesj sekljf skeslj
+  </p>
+  <p class=signature>
+    -Filler Person
+  </p>
+ 
+  <hr>
+  <p class=person-story>
+    this is a filler story... skdjfksl
+    sdkljfklsdj kssjk sjdkfli eisfils nsenfskl si
+    slkefj sil seijfklesj sekljf skeslj
+  </p>
+  <p class=signature>
+    -Filler Person
+  </p>
+
+  <hr>
+  <p class=person-story>
+    this is a filler story... skdjfksl
+    sdkljfklsdj kssjk sjdkfli eisfils nsenfskl si
+    slkefj sil seijfklesj sekljf skeslj
+  </p>
+  <p class=signature>
+    -Filler Person
+  </p>
+
+  <hr>
+  <p class=person-story>
+    this is a filler story... skdjfksl
+    sdkljfklsdj kssjk sjdkfli eisfils nsenfskl si
+    slkefj sil seijfklesj sekljf skeslj
+  </p>
+  <p class=signature>
+    -Filler Person
+  </p>
+
+  <hr>
+  <p class=person-story>
+    this is a filler story... skdjfksl
+    sdkljfklsdj kssjk sjdkfli eisfils nsenfskl si
+    slkefj sil seijfklesj sekljf skeslj
+  </p>
+  <p class=signature>
+    -Filler Person
+  </p>
+
+
+
+  <div class='footer'>
+    <div class='footer-item footer-one'></div>
+    <div class='footer-item footer-two'>
+      <a class=infootertwo href="https://github.com/huntermm18/restoration-project"><br>Link to github repository</a>
+    </div>
+    <div class='footer-item footer-three'></div>
+  </div>  
+
+</div>
 
 
 
