--- a/index.html
+++ b/index.html
@@ -1,37 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Restoration Project</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel=stylesheet href=styles.css />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
 </head>
 
 
 
 <body>
 
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Restoration Project</a>
+      <a class="navbar-brand" href="index.html">Restoration Project</a>
     </div>
     <ul class="nav navbar-nav">
       <li class=active><a href="index.html">Home</a></li>
       <li><a href="pages/information.html">Information</a></li>
       <li><a href="pages/people.html">People</a></li>
-      <li><a href="pages/about.html">about</a></li>
+      <li><a href="pages/about.html">About</a></li>
     </ul>
   </div>
 </nav>
   
-<div class="container">
-  <h3>Basic Navbar Example</h3>
-  <p>A navigation bar is a navigation header that is placed at the top of the page.</p>
-</div>
+<div class="homepic"><img src=images/homepicmain3.png/></div>
+
+<div class="page">
+  
+  <div class=middle-padding>
+    <h3 class='italic mobile-text-shrink-small'>"If Joseph Smith’s transcendent experience in the Sacred Grove teaches us anything,
+       it is that the heavens are open and that God speaks to His children"
+      <br>- President Russell M. Nelson</h3><hr><br>
+      <br><h2 class='bold mobile-text-shrink-large'>Explore this website to learn more about Joseph Smith's first vision and the restoration
+        of Christ's church to the earth in the latter days
+      </h2><br>
+  </div>
+  
+  <div class=picture-text-content>
+
+    <div class='contentbox mobile-invert-order'>
+      <a href="pages/information.html"><img src='images/scriptures.png'/></a>
+      <h3 class=word-margin>Recources for learning about the first vision and the restoration</h3>
+    </div>
+
+    <div class='contentbox'>
+      <h3 class=word-margin>Real people and their testimonies of the resoration</h3>
+      <a href="pages/people.html"><img src='images/path.png'/></a>
+    </div>
+
+    <div class='contentbox mobile-invert-order'>
+      <a href="pages/about.html"><img src='images/foundationsof.png'/></a>
+      <h3 class=word-margin> More information about the project</h3>
+    </div>
+
+
+  </div>
 
 
 <div class='footer'>
