--- a/pages/about.html
+++ b/pages/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Restoration Project</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel=stylesheet href=../styles.css />
@@ -14,27 +14,49 @@
 
 <body>
 
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Restoration Project</a>
+      <a class="navbar-brand" href="../index.html">Restoration Project</a>
     </div>
     <ul class="nav navbar-nav">
       <li><a href="../index.html">Home</a></li>
       <li><a href="information.html">Information</a></li>
       <li><a href="people.html">People</a></li>
-      <li class=active><a href="about.html">about</a></li>
+      <li class=active><a href="about.html">About</a></li>
     </ul>
   </div>
 </nav>
   
-<div class="container">
-  <h3>Basic Navbar Example</h3>
-  <p>A navigation bar is a navigation header that is placed at the top of the page.</p>
+
+<div class="page about-page">
+
+    <div class=about-main>
+      <h1>So what is this project?</h1><br>
+      <img class=about-pic src='../images/campus.png'/><br>
+      <p>
+        My name is Hunter Madsen. I am a student at BYU. As a part of my religion
+         225 Foundations of the Restoration class I was asked to create a project
+        based on the restoration of The Church of Jesus Christ on the earth. I am
+         also a computer science major so I decided to do my project in the form
+        of a website.</p>
+
+    <hr><h4>Feel free to contact me with any questions at huntermm18@gmail.com</h4>
+    </div>
+
+
+  </div>
+
+
+<div class='footer'>
+  <div class='footer-item footer-one'></div>
+  <div class='footer-item footer-two'>
+    <a class=infootertwo href="https://github.com/huntermm18/restoration-project"><br>Link to github repository</a>
+  </div>
+  <div class='footer-item footer-three'></div>
 </div>
-
-
-
+  
+</div>
 
 </body>
 </html>
