try 2 rought draft

--- a/pages/people.html
+++ b/pages/people.html
@@ -27,7 +27,7 @@
   </div>
 </nav>
 
-<div class="homepic"><img src=../images/peoplepicmain.png/></div>
+<div class="homepic"><img src='../images/peoplepicmain.png'/></div>
 
 <div class="page">
 
