--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </div>
 </nav>
   
-<div class="homepic"><img src=images/homepicmain3.png/></div>
+<div class="homepic"><img src='images/homepicmain3.png'/></div>
 
 <div class="page">
   
