--- a/pages/information.html
+++ b/pages/information.html
@@ -28,7 +28,7 @@
   </div>
 </nav>
 
-<div class="homepic"><img src=../images/infopicmain.png/></div>
+<div class="homepic"><img src='../images/infopicmain.png'></div>
 
 <div class="page">
   <div>
